Updates heading spacing fixes #19

--- a/src/css/modules/design-tokens/typography.css
+++ b/src/css/modules/design-tokens/typography.css
@@ -135,3 +135,11 @@ main a:hover {
   margin-left: auto;
   max-width: 44ch;
 }
+
+p + h2 {
+  margin-bottom: 0.25rem;
+}
+
+h2 + p {
+  margin-top: 0;
+}
